fix visibility on mob screen

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -492,7 +492,7 @@ display: flex;
 }
 
 .cards-inner {
-  -webkit-transition: transform 2s;
+  -webkit-transition: transform 1s;
   transform-style: preserve-3d;
    width: 85px;
   height: 85px;
@@ -507,8 +507,8 @@ display: flex;
   flex-direction: column;
   background-image: url("../images/linguaGames.png");
   background-repeat: no-repeat;
-  transition: transform 2s;
-  
+  transition: transform 1s;
+  position: relative;
 }
 
 .cards-inner.flip {
@@ -516,15 +516,16 @@ display: flex;
   -webkit-transform: rotateY(180deg);
   
 }
-/*.cards-inner:hover {
-    
-    transform: scale(1.1);
-}*/
+.cards-inner:active {
+    transform: scale(0.97);
+  transition: transform .2s;
+}
 
 .card-face {
  
   width: 100%;
   height: 100%;
+  position: absolute;
   /*transform: rotateX(0deg);
   -webkit-transform: rotateX(0deg);*/
   
@@ -532,31 +533,29 @@ display: flex;
 
 .card-back {
     display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 1rem;
+    font-weight: 600;
     width: 100%;
   height: 100%;
 background-color: white;
 flex-direction: column;
 border-radius: 15px;
+position: absolute;
+transform: rotateY(180deg);
+  -webkit-transform: rotateY(180deg);
+ 
 }
 
 .card-face,
 .card-back {
-    -webkit-backface-visibility: hidden;
     backface-visibility: hidden;
     display: flex;
     flex-direction: column;
   
 }
 
-.card-back {
-  transform: rotateY(180deg);
-  -webkit-transform: rotateY(180deg);
-  position: absolute;
-  text-align: center;
-  height: 100%;
-  top:0;
-
-}
 /*Footer*/
 
 .footer-wrapper {
